force-app/main/default/objects/Certificaci_n__c/Certificaci_n__c.object-meta.xml
<CustomObject>
    <label>Certificación</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certificaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>