force-app/main/default/objects/Certificaci_n__c/fields/Aprueba__c.field-meta.xml
<CustomField>
    <fullName>Aprueba__c</fullName>
    <defaultValue>false</defaultValue>
    <description>determina si fue aprobado el intento de certificacion</description>
    <label>Aprueba</label>
    <type>Checkbox</type>
</CustomField>