force-app/main/default/objects/Certificaci_n__c/fields/Certificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Certificaci_n__c</fullName>
    <label>Certificación</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_certificaci_n__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Certificaci_n</valueSetName>
    </valueSet>
</CustomField>