force-app/main/default/objects/Certificaci_n__c/fields/Tipo_de_certificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_certificaci_n__c</fullName>
    <label>Tipo de certificación</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_certificaci_n</valueSetName>
    </valueSet>
</CustomField>