force-app/main/default/objects/Certificaci_n__c/recordTypes/Certificaci_n.recordType-meta.xml
<RecordType>
    <fullName>Certificaci_n</fullName>
    <active>true</active>
    <label>Certificación</label>
</RecordType>