force-app/main/default/objects/Certificaci_n__c/recordTypes/Simulacro_de_certificaci_n.recordType-meta.xml
<RecordType>
    <fullName>Simulacro_de_certificaci_n</fullName>
    <active>true</active>
    <label>Simulacro de certificación</label>
</RecordType>