force-app/main/default/objects/Certificaci_n__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Certificaci_n__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>